style: small fix
- small changes to fix responsiveness of text on about page
- the text was overlapping, but is now fixed.

--- a/src/routes/about/About.module.css
+++ b/src/routes/about/About.module.css
@@ -32,16 +32,16 @@
   width: 60%;
   margin-left: 2rem;
   margin-bottom: 0;
-  margin-top: -7rem;
+  margin-top: 2rem;
 }
 .description2{
   font-size: 1rem;
   color: var(--font-color);
   text-align: right;
   align-self: flex-start;
-  width: 60%;
+  width: 50%;
   margin-left: 10rem;
-  margin-top: -6rem;
+  margin-top: 2rem;
 }
 
 .description3{
@@ -51,8 +51,8 @@
   align-self: flex-start;
   width: 60%;
   margin-left: 2rem;
-  margin-bottom: 0;
-  margin-top: -7rem;
+  margin-bottom: 2rem;
+  margin-top: 1rem;
 }
 
 /* Media query for smaller screens */
@@ -102,7 +102,7 @@
     margin-top: 5rem;
   }
   .description2 {
-    width: 80%;
+    width: 70%;
     margin-left: 0;
     font-size: 0.7rem;
     margin-left: 5rem;
